# kaijakstask

./: .gitignore  Cargo.toml
.sqlx/: query-091af67f0d31a3e98921e4e68c44decaf839a0fe3e2e95a3fb8902f308c39d80.json  query-578b51ca8b2a07e77fcfa22d441d4a28760fa6b45ebb68e7b31d635f810e12b3.json  query-fbddfe64eec87e9e917497f0185e04d7336646df9f4d183bc50b4dec11985b94.json
migrations/: 20240508_initial.sql
src/: config.rs  error.rs  main.rs  models.rs
src/handlers/: auth.rs  mod.rs  todos.rs  upload.rs
src/middleware/: auth.rs
