[package]
name = "kaijakstask"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-multipart = "0.6"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
mime = "0.3"
mime_guess = "2.0"
derive_more = "0.99"
futures-util = "0.3"
